# mntkan

./: Cargo.toml  generate_schema_and_models.sh  mntconfig.toml.default
migrations/2020-08-17-100000_create_cards/: down.sql  up.sql
src/: main.rs  mntconfig.rs  models.rs  schema.rs
src/routes/: cards.rs
static/css/: style.css
static/js/: mntkan.js
templates/: cards.html
