[package]
name = "mntkan"
version = "1.0.0"
authors = ["Lukas F. Hartmann <lukas@mntre.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0"
actix-files = "0.2.1"
diesel = { version = "1.4.4", features = ["sqlite", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.7"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1"
toml = "0.5.6"
chrono = "0.4.13"
uuid = { version = "0.8.0", features = ["v4"] }
